@@ -5,7 +5,8 @@ Changelog
 3.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add new spinner, update spinner position and add helper functions.
+  [jone]
 
 
 3.1.2 (2012-03-05)
